--- a/packages.config
+++ b/packages.config
@@ -4,6 +4,7 @@
   <package id="DSharpPlus" version="4.5.0" targetFramework="net48" />
   <package id="DSharpPlus.CommandsNext" version="4.5.0" targetFramework="net48" />
   <package id="DSharpPlus.Interactivity" version="4.5.0" targetFramework="net48" />
+  <package id="DSharpPlus.Lavalink" version="4.5.0" targetFramework="net48" />
   <package id="DSharpPlus.SlashCommands" version="4.5.0" targetFramework="net48" />
   <package id="Emzi0767.Common" version="2.8.0" targetFramework="net48" />
   <package id="IndexRange" version="1.0.3" targetFramework="net48" />
